Implement transitions_and_animation utilities.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,22 +46,23 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (12)\n",
-    "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
-    "    ├── borders.ipynb           # Border utilities for Tailwind CSS\n",
-    "    ├── effects.ipynb           # Shadow, opacity and other visual effect utilities for Tailwind CSS\n",
-    "    ├── filters.ipynb           # Filter utilities for Tailwind CSS\n",
-    "    ├── flexbox_and_grid.ipynb  # Flexbox and CSS Grid utilities for Tailwind CSS\n",
-    "    ├── interactivity.ipynb     # Interactivity utilities for Tailwind CSS\n",
-    "    ├── layout.ipynb            # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
-    "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
-    "    ├── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
-    "    ├── svg.ipynb               # SVG utilities for Tailwind CSS\n",
-    "    ├── tables.ipynb            # Table utilities for Tailwind CSS\n",
-    "    └── typography.ipynb        # Typography utilities for Tailwind CSS\n",
+    "└── utilities/ (13)\n",
+    "    ├── backgrounds.ipynb                # Background utilities for Tailwind CSS\n",
+    "    ├── borders.ipynb                    # Border utilities for Tailwind CSS\n",
+    "    ├── effects.ipynb                    # Shadow, opacity and other visual effect utilities for Tailwind CSS\n",
+    "    ├── filters.ipynb                    # Filter utilities for Tailwind CSS\n",
+    "    ├── flexbox_and_grid.ipynb           # Flexbox and CSS Grid utilities for Tailwind CSS\n",
+    "    ├── interactivity.ipynb              # Interactivity utilities for Tailwind CSS\n",
+    "    ├── layout.ipynb                     # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
+    "    ├── sizing.ipynb                     # Width, height, and min/max sizing utilities for Tailwind CSS\n",
+    "    ├── spacing.ipynb                    # Padding and margin utilities for Tailwind CSS\n",
+    "    ├── svg.ipynb                        # SVG utilities for Tailwind CSS\n",
+    "    ├── tables.ipynb                     # Table utilities for Tailwind CSS\n",
+    "    ├── transitions_and_animation.ipynb  # Transition and animation utilities for Tailwind CSS\n",
+    "    └── typography.ipynb                 # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 27 notebooks across 4 directories"
+    "Total: 28 notebooks across 4 directories"
    ]
   },
   {
@@ -98,75 +99,78 @@
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "    utilities_svg[utilities.svg<br/>svg]\n",
     "    utilities_tables[utilities.tables<br/>tables]\n",
+    "    utilities_transitions_and_animation[utilities.transitions_and_animation<br/>transitions_and_animation]\n",
     "    utilities_typography[utilities.typography<br/>typography]\n",
     "\n",
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_factory_extraction --> cli_utils\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_factory_extraction --> core_base\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_utils\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_factory_extraction\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_borders --> builders_colors\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> core_base\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
     "```\n",
     "\n",
-    "*64 cross-module dependencies detected*"
+    "*66 cross-module dependencies detected*"
    ]
   },
   {
@@ -5198,6 +5202,244 @@
     "        server.stop()\n",
     "    \"\"\"\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### transitions_and_animation (`transitions_and_animation.ipynb`)\n",
+    "> Transition and animation utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.transitions_and_animation import (\n",
+    "    transition,\n",
+    "    transition_behavior,\n",
+    "    DURATION_SCALE,\n",
+    "    DURATION_CONFIG,\n",
+    "    duration,\n",
+    "    ease,\n",
+    "    DELAY_SCALE,\n",
+    "    DELAY_CONFIG,\n",
+    "    delay,\n",
+    "    animate,\n",
+    "    TransitionPropertyFactory,\n",
+    "    test_transitions_and_animation_property_examples,\n",
+    "    test_transitions_and_animation_behavior_examples,\n",
+    "    DurationFactory,\n",
+    "    test_transitions_and_animation_duration_examples,\n",
+    "    EaseFactory,\n",
+    "    test_transitions_and_animation_timing_examples,\n",
+    "    DelayFactory,\n",
+    "    test_transitions_and_animation_delay_examples,\n",
+    "    AnimationFactory,\n",
+    "    test_transitions_and_animation_examples,\n",
+    "    test_transitions_and_animation_practical_examples,\n",
+    "    test_transitions_and_animation_composition_examples,\n",
+    "    test_transitions_and_animation_factory_documentation,\n",
+    "    smooth_transition,\n",
+    "    hover_effect,\n",
+    "    fade_in,\n",
+    "    loading_spinner,\n",
+    "    skeleton_loader,\n",
+    "    test_transitions_and_animation_helper_examples\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_property_examples()\n",
+    "    \"Test transition property utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_behavior_examples()\n",
+    "    \"Test transition behavior utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_duration_examples()\n",
+    "    \"Test transition duration utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_timing_examples():\n",
+    "    \"\"\"Test transition timing function utilities.\"\"\"\n",
+    "    # Test predefined easing functions\n",
+    "    assert ease.linear == \"ease-linear\"\n",
+    "    assert ease._in == \"ease-in\"  # Note: 'in' is a Python keyword, so we use 'in_'\n",
+    "    \"Test transition timing function utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_delay_examples()\n",
+    "    \"Test transition delay utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_examples()\n",
+    "    \"Test animation utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_practical_examples()\n",
+    "    \"Test transition and animation utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_practical_examples()\n",
+    "    \"Test animation utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_composition_examples()\n",
+    "    \"Test composing multiple transition utilities together.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_factory_documentation()\n",
+    "    \"Test that transition and animation factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def smooth_transition(\n",
+    "    properties: str = \"all\",  # Which properties to transition (default: all)\n",
+    "    duration_ms: int = 300,  # Duration in milliseconds\n",
+    "    easing: str = \"in-out\"  # Easing function\n",
+    ") -> str:  # Combined CSS classes for smooth transitions\n",
+    "    \"Create a smooth transition with common defaults.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def hover_effect(\n",
+    "    duration_ms: int = 200  # Duration in milliseconds\n",
+    ") -> str:  # Combined CSS classes for hover effects\n",
+    "    \"Standard hover effect transition for interactive elements.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def fade_in(\n",
+    "    duration_ms: int = 500,  # Duration in milliseconds\n",
+    "    delay_ms: Optional[int] = None  # Optional delay in milliseconds\n",
+    ") -> str:  # Combined CSS classes for fade-in effect\n",
+    "    \"Fade-in transition for entering elements.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def loading_spinner(\n",
+    ") -> str:  # Combined CSS classes for a loading spinner\n",
+    "    \"Create a loading spinner animation.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def skeleton_loader(\n",
+    ") -> str:  # Combined CSS classes for a skeleton loader\n",
+    "    \"Create a skeleton loader animation for content placeholders.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_transitions_and_animation_helper_examples()\n",
+    "    \"Test helper functions for common transition patterns.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class TransitionPropertyFactory(SimpleFactory):\n",
+    "    \"Factory for transition property utilities with custom value support.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the transition property factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class TransitionPropertyFactory(SimpleFactory):\n",
+    "    \"Factory for transition property utilities with custom value support.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the transition property factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class DurationFactory:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        prefix: str,\n",
+    "        config: ScaleConfig,\n",
+    "        doc: Optional[str] = None\n",
+    "    )\n",
+    "    \"Factory for duration utilities with millisecond support.\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            prefix: str,\n",
+    "            config: ScaleConfig,\n",
+    "            doc: Optional[str] = None\n",
+    "        )\n",
+    "        \"Initialize duration factory with autocomplete properties.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the duration factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class EaseFactory(SimpleFactory):\n",
+    "    \"Factory for easing/timing function utilities with custom value support.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the ease factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class DelayFactory:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        prefix: str,\n",
+    "        config: ScaleConfig,\n",
+    "        doc: Optional[str] = None\n",
+    "    )\n",
+    "    \"Factory for delay utilities with millisecond support.\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            prefix: str,\n",
+    "            config: ScaleConfig,\n",
+    "            doc: Optional[str] = None\n",
+    "        )\n",
+    "        \"Initialize delay factory with autocomplete properties.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class AnimationFactory(SimpleFactory):\n",
+    "    \"Factory for animation utilities with custom value support.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the animation factory.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "DURATION_SCALE = [9 items]  # Standard Tailwind duration scale\n",
+    "DURATION_CONFIG  # Duration configuration\n",
+    "duration  # The duration factory\n",
+    "DELAY_SCALE = [9 items]  # Standard Tailwind delay scale\n",
+    "DELAY_CONFIG  # Delay configuration\n",
+    "delay  # The delay factory\n",
+    "```"
    ]
   },
   {
