--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,7 +46,8 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (14)\n",
+    "└── utilities/ (15)\n",
+    "    ├── accessibility.ipynb              # Accessibility utilities for Tailwind CSS\n",
     "    ├── backgrounds.ipynb                # Background utilities for Tailwind CSS\n",
     "    ├── borders.ipynb                    # Border utilities for Tailwind CSS\n",
     "    ├── effects.ipynb                    # Shadow, opacity and other visual effect utilities for Tailwind CSS\n",
@@ -63,7 +64,7 @@
     "    └── typography.ipynb                 # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 29 notebooks across 4 directories"
+    "Total: 30 notebooks across 4 directories"
    ]
   },
   {
@@ -89,6 +90,7 @@
     "    core_base[core.base<br/>base]\n",
     "    core_resources[core.resources<br/>resources]\n",
     "    core_testing[core.testing<br/>testing]\n",
+    "    utilities_accessibility[utilities.accessibility<br/>accessibility]\n",
     "    utilities_backgrounds[utilities.backgrounds<br/>backgrounds]\n",
     "    utilities_borders[utilities.borders<br/>borders]\n",
     "    utilities_effects[utilities.effects<br/>effects]\n",
@@ -108,73 +110,76 @@
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_utils\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_spacing\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> core_base\n",
+    "    core_testing --> core_resources\n",
+    "    utilities_accessibility --> utilities_layout\n",
+    "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
     "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_sizing --> core_base\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> core_base\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_typography --> builders_scales\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
-    "*68 cross-module dependencies detected*"
+    "*71 cross-module dependencies detected*"
    ]
   },
   {
@@ -197,7 +202,7 @@
     "This tool helps you explore the cjm-fasthtml-tailwind library, which provides:\n",
     "- Python-native Tailwind CSS v4 utility class builders for FastHTML projects\n",
     "- Type-safe, dynamic CSS class generation without hardcoded strings\n",
-    "- Comprehensive utility factories (bg, bg_attachment, bg_clip, bg_conic, etc.)\n",
+    "- Comprehensive utility factories (forced_color_adjust, not_sr_only, sr_only, etc.)\n",
     "- Helper functions for common patterns\n",
     "- Full integration with FastHTML components\n",
     "\n",
@@ -251,8 +256,8 @@
     "  - Use 'scan' to analyze existing code for migration opportunities\n",
     "\n",
     "Key Concepts:\n",
-    "  - Factories: Objects that generate CSS classes (e.g., bg, bg_attachment, bg_clip, bg_conic)\n",
-    "  - Modules: Categories of utilities (backgrounds, borders, effects, etc.)\n",
+    "  - Factories: Objects that generate CSS classes (e.g., forced_color_adjust, not_sr_only, sr_only)\n",
+    "  - Modules: Categories of utilities (accessibility, backgrounds, borders, etc.)\n",
     "  - Examples: Test functions demonstrating usage patterns\n",
     "  - Helpers: Convenience functions for common patterns\n",
     "\n",
@@ -261,16 +266,16 @@
     "  - Use 'test-code' to validate generated code before using it\n",
     "  - Use 'imports' to get all necessary import statements\n",
     "  - Use 'scan' to identify replaceable hardcoded CSS classes\n",
-    "  - Factory names are intuitive: bg, bg_attachment, bg_clip, bg_conic\n",
+    "  - Factory names are intuitive: forced_color_adjust, not_sr_only, sr_only\n",
     "  - Combine utilities with combine_classes() function\n",
     "  - All factories support method chaining and attribute access\n",
     "\n",
     "Example Usage Flow:\n",
     "  cjm-tailwind-explore modules                    # See what's available\n",
-    "  cjm-tailwind-explore factories -m backgrounds       # Explore backgrounds utilities\n",
-    "  cjm-tailwind-explore factory backgrounds bg          # Learn about bg factory\n",
-    "  cjm-tailwind-explore example backgrounds arbitrary      # See usage examples\n",
-    "  cjm-tailwind-explore test-code 'print(str(bg(\"#123456\")))'   # Test your understanding\n",
+    "  cjm-tailwind-explore factories -m accessibility       # Explore accessibility utilities\n",
+    "  cjm-tailwind-explore factory accessibility forced_color_adjust          # Learn about forced_color_adjust factory\n",
+    "  cjm-tailwind-explore example accessibility forced_color_adjust      # See usage examples\n",
+    "  cjm-tailwind-explore test-code 'print(str(sr_only))'   # Test your understanding\n",
     "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
     "\n",
     "```\n",
@@ -285,6 +290,98 @@
     "## Module Overview\n",
     "\n",
     "Detailed documentation for each module in the project:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### accessibility (`accessibility.ipynb`)\n",
+    "> Accessibility utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.accessibility import (\n",
+    "    FORCED_COLOR_ADJUST_VALUES,\n",
+    "    forced_color_adjust,\n",
+    "    test_accessibility_forced_color_adjust_examples,\n",
+    "    test_accessibility_screen_reader_examples,\n",
+    "    test_accessibility_practical_examples,\n",
+    "    test_accessibility_factory_documentation,\n",
+    "    visually_hidden,\n",
+    "    high_contrast_safe,\n",
+    "    test_accessibility_helper_examples\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_accessibility_forced_color_adjust_examples(\n",
+    ")\n",
+    "    \"Test forced color adjust utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_accessibility_screen_reader_examples(\n",
+    ")\n",
+    "    \"Test screen reader utilities imported from layout module.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_accessibility_practical_examples(\n",
+    ")\n",
+    "    \"Test accessibility utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_accessibility_factory_documentation(\n",
+    ")\n",
+    "    \"Test that factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def visually_hidden(\n",
+    "    focusable: bool = False  # Whether the element should be visible when focused\n",
+    ") -> str:  # CSS classes for hiding element visually\n",
+    "    \"\"\"\n",
+    "    Hide an element visually but keep it available to screen readers.\n",
+    "    \n",
+    "    Args:\n",
+    "        focusable: If True, element becomes visible when focused (useful for skip links)\n",
+    "    \n",
+    "    Returns:\n",
+    "        CSS classes for visual hiding with optional focus visibility\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def high_contrast_safe(\n",
+    "    *classes: str  # Additional CSS classes to combine\n",
+    ") -> str:  # CSS classes including forced color adjust\n",
+    "    \"\"\"\n",
+    "    Create classes that work well with high contrast mode.\n",
+    "    \n",
+    "    Args:\n",
+    "        *classes: Additional CSS classes to include\n",
+    "    \n",
+    "    Returns:\n",
+    "        Combined CSS classes with forced-color-adjust-auto\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_accessibility_helper_examples(\n",
+    ")\n",
+    "    \"Test helper functions for common accessibility patterns.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "FORCED_COLOR_ADJUST_VALUES = {2 items}\n",
+    "```"
    ]
   },
   {
